--- a/source/includes/changelogs/releases/3.0.8.rst
+++ b/source/includes/changelogs/releases/3.0.8.rst
@@ -49,7 +49,7 @@ Build and Packaging
 Tools
 ~~~~~
 
-- :issue:`TOOLS-702` bsondump does not keep attribut order
+- :issue:`TOOLS-702` bsondump does not keep attribute order
 - :issue:`TOOLS-920` mongodump issue with temporary map/reduce collections
 - :issue:`TOOLS-939` Error restoring database "insertion error: EOF"
 
