--- a/source/includes/changelogs/releases/3.2.10.rst
+++ b/source/includes/changelogs/releases/3.2.10.rst
@@ -6,7 +6,7 @@
 Sharding
 ~~~~~~~~
 
-- :issue:`SERVER-23598` Race in config.version intialization
+- :issue:`SERVER-23598` Race in config.version initialization
 - :issue:`SERVER-25516` Add setParameter option to 3.2 to prevent the replica set monitor from ever giving up on monitoring a set
 - :issue:`SERVER-25527` Send the version of the chunk being moved as part of the shard moveChunk and splitChunk commands
 - :issue:`SERVER-25574` Remove jstest/core/hashtest.1js
