--- a/source/includes/changelogs/releases/3.2.5.rst
+++ b/source/includes/changelogs/releases/3.2.5.rst
@@ -128,5 +128,5 @@ Internals
 - :issue:`SERVER-23190` Add build variant for rhel 7.1 on POWER to 3.2 branch
 - :issue:`SERVER-23288` Update 3.2 branch mongo-perf to check against 3.0.9 baseline
 - :issue:`TOOLS-1058` goconvey fails with gccgo
-- :issue:`TOOLS-1064` mongoimport alwasy returns 0 imported documents when compiled with gccgo
+- :issue:`TOOLS-1064` mongoimport always returns 0 imported documents when compiled with gccgo
 
