--- a/source/includes/changelogs/releases/3.2.8.rst
+++ b/source/includes/changelogs/releases/3.2.8.rst
@@ -39,7 +39,7 @@ Write Operations
 JavaScript
 ~~~~~~~~~~
 
-:issue:`SERVER-24369` Surpress ssl_fips.js test assertation on Ubuntu 16.04
+:issue:`SERVER-24369` Supress ssl_fips.js test assertion on Ubuntu 16.04
 
 Storage
 ~~~~~~~
