--- a/source/includes/changelogs/releases/3.4.2.rst
+++ b/source/includes/changelogs/releases/3.4.2.rst
@@ -138,7 +138,7 @@ Build and Packaging
 Tools
 ~~~~~
 
-- :issue:`TOOLS-1553` PreProcessing is failling with "got invalid document size"
+- :issue:`TOOLS-1553` PreProcessing is failing with "got invalid document size"
 - :issue:`TOOLS-1569` mongo-replay crashes during playback
 - :issue:`TOOLS-1576` nil pointer derereference when error occurs
 
