--- a/source/includes/changelogs/releases/3.4.7.rst
+++ b/source/includes/changelogs/releases/3.4.7.rst
@@ -48,7 +48,7 @@ Build and Packaging
 Tools
 ~~~~~
 
-- :issue:`TOOLS-1109` failes to build on arm64 (syscall.Dup2 not supported)
+- :issue:`TOOLS-1109` fails to build on arm64 (syscall.Dup2 not supported)
 - :issue:`TOOLS-1741` mongoimport --uri throws errors when passed Atlas Connection String URI
 
 Internals
@@ -65,7 +65,7 @@ Internals
 - :issue:`SERVER-29947` Implement Storage Node Watchdog
 - :issue:`SERVER-30132` Storage Node Watchdog needs to check journal directory
 - :issue:`SERVER-30169` Increase Watchdog Test timeouts
-- :issue:`SERVER-30415` Exclude new "evergreen" agent binary name from automatic process killing in Evergren
+- :issue:`SERVER-30415` Exclude new "evergreen" agent binary name from automatic process killing in Evergreen
 - :issue:`SERVER-30433` Increase Watchdog Test timeouts
 - :issue:`TOOLS-1542` dump and export shouldn't count views before running
 - :issue:`TOOLS-1563` windows tests are failing after ``use mongodb 3.4 "current" tests``
