--- a/source/includes/changelogs/releases/3.6.2.rst
+++ b/source/includes/changelogs/releases/3.6.2.rst
@@ -26,7 +26,7 @@ Replication
 - :issue:`SERVER-31684` QueryPlanKilled (operation exceeded time limit) in $changeStream with updateLookup
 - :issue:`SERVER-31749` Clarify the reason temporary unique collection names are made
 - :issue:`SERVER-32098` Disallow operations on drop-pending collections through applyOps
-- :issue:`SERVER-32136` initial_sync_drop_collection.js should wait for system to stablize after restarting node
+- :issue:`SERVER-32136` initial_sync_drop_collection.js should wait for system to stabilize after restarting node
 - :issue:`SERVER-32224` Disable chaining in initial_sync_drop_collection.js
 
 Aggregation
