--- a/source/includes/changelogs/releases/4.4.2.rst
+++ b/source/includes/changelogs/releases/4.4.2.rst
@@ -272,7 +272,7 @@ Internals
 - :issue:`WT-6596` Increase cache for timestamp abort test and separate key spaces for all abort tests
 - :issue:`WT-6598` Add new API allowing changing dhandle hash bucket size
 - :issue:`WT-6602` Allow operation timeout ms to be passed to commit and rollback
-- :issue:`WT-6604` Fix typo in the comment descibing WT_CELL structure
+- :issue:`WT-6604` Fix typo in the comment describing WT_CELL structure
 - :issue:`WT-6610` Fix incremental backup checkpoint parsing to handle upgrades
 - :issue:`WT-6612` Increase cache size in test_prepare08 to fix rollback error due to cache pressure
 - :issue:`WT-6613` Add python test for early_load flag
