--- a/source/includes/changelogs/releases/6.0.1.rst
+++ b/source/includes/changelogs/releases/6.0.1.rst
@@ -63,7 +63,7 @@ Internals
 - :issue:`SERVER-66943` Do not run aggregation for orphans against oplog.rs for collstats
 - :issue:`SERVER-66958` Handle potential multiple "processing" range deletions on step-up
 - :issue:`SERVER-66970` Add EOL'd releases information to the mongo repo
-- :issue:`SERVER-67006` increase log vebosity for DEBUG assertion messages in replsets/profile.js
+- :issue:`SERVER-67006` increase log verbosity for DEBUG assertion messages in replsets/profile.js
 - :issue:`SERVER-67122` Add warning when building with --module=ninja that it is deprecated
 - :issue:`SERVER-67188` Use -large instance for replica_sets_jscore_passthrough on Windows
 - :issue:`SERVER-67227` Insert with collectionUUID could implicitly create a collection if command failed with collectionUUIDMismatch
