--- a/source/includes/changelogs/releases/6.0.2.rst
+++ b/source/includes/changelogs/releases/6.0.2.rst
@@ -77,7 +77,7 @@ Internals
 - :issue:`SERVER-68465` selinux tests fail due to journal.enabled parameter
 - :issue:`SERVER-68475` Find solution to relocation overflow in static builds
 - :issue:`SERVER-68477` Improve NaN-handling for expireAfterSeconds TTL index parameter
-- :issue:`SERVER-68479` collMod coordiantor V2 must block migration on bucket nss
+- :issue:`SERVER-68479` collMod coordinator V2 must block migration on bucket nss
 - :issue:`SERVER-68521` Restore timeout in awaitdata_getmore.js
 - :issue:`SERVER-68540` Add docker_incompatible tag for jscore tests
 - :issue:`SERVER-68568` future_git_tag should override MONGO_VERSION
