--- a/source/includes/changelogs/releases/6.0.3.rst
+++ b/source/includes/changelogs/releases/6.0.3.rst
@@ -100,7 +100,7 @@ Internals
 - :issue:`SERVER-65191` Run StorageEngineRepairTest with wiredTiger
 - :issue:`SERVER-65816` Change balancer policy to balance on data size
   rather than number of chunks
-- :issue:`SERVER-66078` Adapt sessions collection balacing policy to
+- :issue:`SERVER-66078` Adapt sessions collection balancing policy to
   data-size aware balancing
 - :issue:`SERVER-66208` Remove chunk creation for shard collection with
   existing data
