--- a/source/includes/changelogs/releases/6.3.0.rst
+++ b/source/includes/changelogs/releases/6.3.0.rst
@@ -604,7 +604,7 @@ Internals
 - :issue:`SERVER-71085` DropCollectionCoordinator should only report a
   single drop event through the Primary Shard oplog
 - :issue:`SERVER-71087` Add tests for aggregation stages that have a nss
-  field as input or ouput
+  field as input or output
 - :issue:`SERVER-71090` Remove leftover FixedFCVRegion
 - :issue:`SERVER-71101` ColumnScan::close() should close the dense
   column cursor
