--- a/source/release-notes.txt
+++ b/source/release-notes.txt
@@ -66,6 +66,7 @@ EOL'ed Releases
    :maxdepth: 1
    :hidden:
 
+   /release-notes/7.0
    /release-notes/6.3
    /release-notes/6.2
    /release-notes/6.1
