--- a/source/includes/changelogs/releases/4.4.22.rst
+++ b/source/includes/changelogs/releases/4.4.22.rst
@@ -19,6 +19,8 @@ Internals
 - :issue:`SERVER-66009` Ban $search when running in update pipeline
   (stub process interface is present)
 - :issue:`SERVER-71089` Run signing tasks on a single distro
+- :issue:`SERVER-71249` Remove buildvariant task overrides for .publish
+  tags
 - :issue:`SERVER-72815` Extend serverstatus to track Document count and
   Duration for updateMany and deleteMany
 - :issue:`SERVER-73007` CURL_OPT_SEEKFUNCTION not set for multi-pass
@@ -28,21 +30,26 @@ Internals
   count in LockstepOr enumeration strategy
 - :issue:`SERVER-75404` Designate $searchSortValues as metadata field on
   v5.0
+- :issue:`SERVER-75479` Use system python on macos for ssl tests
 - :issue:`SERVER-75652` Migrate from notary client to garasign for push
   task
 - :issue:`SERVER-76063` Update the getFreeMonitoringStatus command to
   always return state: disabled
-- :issue:`SERVER-76179` "/var/run/mongodb/"mongod.pid" deleted on each
-  Mongod shutdown
 - :issue:`SERVER-76274` Move microbenchmarks to their own task distro
 - :issue:`SERVER-76378` Use estimated impersonation metadata size in
   calculating block chunks
 - :issue:`SERVER-76498` Update push task to run on rhel8.7-small
 - :issue:`SERVER-76599` Exclude
   jstests/sharding/balancer_collection_status.js from step-down suites
+- :issue:`SERVER-76619` Add setParameter to enable libcurl's verbose
+  logging
 - :issue:`SERVER-76695`
   initial_sync_nodes_maintain_and_gossip_commit_point.js should wait
   longer for initial sync node to advance commit point
+- :issue:`SERVER-76698` Disable Curl Connection Pooling for STS requests
+- :issue:`SERVER-76699` Add configurable retry count in AWS IAM code
+- :issue:`SERVER-76721` Robustify plan_cache_stats_shard_and_host.js to
+  count plan cache entries only for specific plan cache key
 - :issue:`WT-8689` Switch Evergreen zSeries builder to RHEL distro
 - :issue:`WT-8981` Enable evergreen testing for RHEL8 on PPC
 - :issue:`WT-10551` Incremental backup may omit modified blocks
