--- a/source/release-notes.txt
+++ b/source/release-notes.txt
@@ -14,6 +14,8 @@ Current Stable Release
 
 (*7.0-series*)
 
+.. include:: includes/rc-available.rst
+
 - :ref:`release-notes-7.0`
 
 Previous Rapid Releases
