DOCS-16228 Release Notes for 6.3.2 (#3490)
* DOCS-16228 Release Notes for 6.3.2

* Fixes per Britt

--- a/source/includes/changelogs/releases/6.3.2.rst
+++ b/source/includes/changelogs/releases/6.3.2.rst
@@ -34,6 +34,8 @@ Internals
   range returns wrong results
 - :issue:`SERVER-71009` Make sure the select chunks operation doesn't
   take too long
+- :issue:`SERVER-71985` Automatically retry time series insert on
+  DuplicateKey error
 - :issue:`SERVER-72520` Decommission Microbenchmark performance tests
   that are running on CBI instances
 - :issue:`SERVER-72686` Add support for $collStats agg stage on
@@ -73,9 +75,11 @@ Internals
 - :issue:`SERVER-76274` Move microbenchmarks to their own task distro
 - :issue:`SERVER-76321` Buffer overrun while deserializing compound
   group key spilled to disk in SBE hash agg implementation
+- :issue:`SERVER-76331` Bump mongo-task-generator version to 0.7.5
 - :issue:`SERVER-76457` Support storing BuildID to debug symbols mapping
   for sanitizer builds
 - :issue:`SERVER-76498` Update push task to run on rhel8.7-small
+- :issue:`SERVER-76519` MIgrate crypt_push task to Garasign
 - :issue:`SERVER-76543` The mongod-dump-sessions gdb pretty printer does
   not work
 - :issue:`SERVER-76549` Remove symbolization from macos variants
@@ -88,3 +92,11 @@ Internals
 - :issue:`SERVER-77018` Deadlock between dbStats and 2 index builds
 - :issue:`SERVER-77380` Using --serverless flag disables oplog
   truncation
+- :issue:`SERVER-77383` ".msi.sha256" files have incorrect shasum
+- :issue:`SERVER-77527` mongodbtoolchain/v3 stdlib unsafe against
+  self-moves
+- :issue:`SERVER-78080` Use fully random bytes for 8 low-order bytes of
+  OID value for time series bucket _id
+- :issue:`SERVER-78122` [6.3] Address bucket OID collisions with buckets
+  pending compression
+
