DOCSP-30647 Note that shared library is optional (#3428)
* Noted that shared library is optional

* Noted that shared library is optional

* Moved optional item to end of list

* Moved optional step

--- a/source/core/queryable-encryption/install.txt
+++ b/source/core/queryable-encryption/install.txt
@@ -22,15 +22,20 @@ Learn about the applications and libraries you must install to use
 What You Need
 -------------
 
-Before you can use {+qe+}, you must set up the following items
+Before you can use {+qe+}, set up the following items
 in your development environment:
 
-- Download the :ref:`{+shared-library+} <qe-reference-shared-library-download>`.
+- (Optional) Download the :ref:`{+shared-library+} <qe-reference-shared-library-download>`. 
+  The shared library replaces :ref:`mongocryptd <qe-mongocryptd>` and
+  does not require spawning a new process.
+  
 - Install a :ref:`MongoDB Driver Compatible with {+qe+} <qe-driver-compatibility>`.
 - Start an
   :atlas:`Atlas Cluster </getting-started?jmp=docs>`
   or a
-  :manual:`MongoDB Enterprise instance </tutorial/manage-mongodb-processes/#start-mongod-processes>`
+  :manual:`MongoDB Enterprise instance
+  </tutorial/manage-mongodb-processes/#start-mongod-processes>`
+  
 - Install specific driver dependencies. To see the list of
   dependencies for your driver, select the tab corresponding to the language you
   would like to use to complete this guide:
