DOCSP-31209 Add warning about QE with Atlas (#3903)
* add warning about QE with Atlas

* Mike feedback

* source constant

* Cynthia feedback

--- a/source/core/queryable-encryption/install.txt
+++ b/source/core/queryable-encryption/install.txt
@@ -35,6 +35,11 @@ in your development environment:
   or a
   :manual:`MongoDB Enterprise instance
   </tutorial/manage-mongodb-processes/#start-mongod-processes>`
+
+  .. warning::
+
+     You can use {+qe+} only with MongoDB 7.0 and later, which
+     may not yet be available in MongoDB Atlas.
   
 - Install specific driver dependencies. To see the list of
   dependencies for your driver, select the tab corresponding to the language you
