Fix broken includes (#4322)
* fix broken include

* fix broken ref

* typo fix

--- a/source/core/csfle/install.txt
+++ b/source/core/csfle/install.txt
@@ -26,8 +26,8 @@ Before you can use {+csfle-abbrev+}, you must set up the following items
 in your development environment:
 
 - (Optional) Download the :ref:`{+shared-library+} <csfle-reference-shared-library-download>`. 
-  The shared library is a preferred alternative to :ref:`mongocryptd <csfle-mongocryptd>` and
-  does not require spawning a new process. `mongocryptd` is still supported.
+  The shared library is a preferred alternative to :ref:`mongocryptd <csfle-reference-mongocryptd>` and
+  does not require spawning a new process. ``mongocryptd`` is still supported.
 - Install :manual:`MongoDB Enterprise Edition version 4.2 or later </installation/#mongodb-enterprise-edition-installation-tutorials>`.
 - Install a :ref:`MongoDB Driver Compatible with CSFLE <csfle-driver-compatibility>`.
 - Start a
