DOCSP-30673 streamline qe language (#4404)
* Organized QE CSFLE doc constants, fixed lingering uses of the term manual encryption

* Added glossary entries for CSFLE and QE concepts

* Replaced literal uses of automatic encryption shared library with the shared-library constant

* Fixed order of some doc constants, fixed a glossary link for capitalization

* Removed the use of QE as an abbreviation

* Centralized on Key Management System instead of sometimes using Key Management Service

* Improved glossary entries for automatic and explicit encryption

* Checking doc constant substitution in codeblocks and refs

* Cleaned up use of KMS vs KMS provider for consistency

* Glossary feedback

* External terminology feedback

--- a/source/core/csfle/install.txt
+++ b/source/core/csfle/install.txt
@@ -26,7 +26,7 @@ Before you can use {+csfle-abbrev+}, you must set up the following items
 in your development environment:
 
 - (Optional) Download the :ref:`{+shared-library+} <csfle-reference-shared-library-download>`. 
-  The shared library is a preferred alternative to :ref:`mongocryptd <csfle-reference-mongocryptd>` and
+  The {+shared-library+} is a preferred alternative to :ref:`mongocryptd <csfle-reference-mongocryptd>` and
   does not require spawning a new process. ``mongocryptd`` is still supported.
 - Install :manual:`MongoDB Enterprise Edition version 4.2 or later </installation/#mongodb-enterprise-edition-installation-tutorials>`.
 - Install a :ref:`MongoDB Driver Compatible with CSFLE <csfle-driver-compatibility>`.
@@ -72,5 +72,5 @@ Learn More
 
 To start using {+csfle-abbrev+}, see :ref:`csfle-quick-start`.
 
-To learn how to use {+csfle-abbrev+} with a remote {+km-service-long+}
+To learn how to use {+csfle-abbrev+} with a remote {+kms-long+}
 provider, see :ref:`csfle-tutorial-automatic-encryption`.
