--- a/source/core/queryable-encryption/install.txt
+++ b/source/core/queryable-encryption/install.txt
@@ -26,7 +26,7 @@ Before you can use {+qe+}, set up the following items
 in your development environment:
 
 - (Optional) Download the :ref:`{+shared-library+} <qe-reference-shared-library-download>`. 
-  The shared library replaces :ref:`mongocryptd <qe-mongocryptd>` and
+  The {+shared-library+} replaces :ref:`mongocryptd <qe-mongocryptd>` and
   does not require spawning a new process.
   
 - Install a :ref:`MongoDB Driver Compatible with {+qe+} <qe-driver-compatibility>`.
@@ -80,5 +80,4 @@ Learn More
 
 To start using {+qe+}, see :ref:`qe-quick-start`.
 
-To learn how to use {+qe+} with a remote {+km-service-long+}
-provider, see :ref:`qe-tutorial-automatic-encryption`.
+To learn how to use {+qe+} with a remote {+kms-long+}, see :ref:`qe-tutorial-automatic-encryption`.
