(DOCSP-32748): Finalize changelog for 7.0.1 (#4504)

--- a/source/includes/changelogs/releases/7.0.1.rst
+++ b/source/includes/changelogs/releases/7.0.1.rst
@@ -57,8 +57,6 @@ Internals
 - :issue:`SERVER-77823` Pseudocode for throughput probing
 - :issue:`SERVER-78095` Relax the assertion checking for
   update_multifield_multiupdate.js FSM workload
-- :issue:`SERVER-78217` Renaming view return wrong error on sharded
-  cluster (2nd attempt)
 - :issue:`SERVER-78369` ignoreUnknownIndexOptions doesn't account for
   the 'weights' index field
 - :issue:`SERVER-78498` Make the balancer failpoint smarter
@@ -70,9 +68,11 @@ Internals
 - :issue:`SERVER-78769` The asynchronous stop sequence of the Balancer
   may survive the shutdown of the mongod (and raise false memory leak
   notifications).
+- :issue:`SERVER-78782` Complete TODO listed in SERVER-75120
 - :issue:`SERVER-78813` Commit point propagation fails indefinitely with
   exhaust cursors with null lastCommitted optime
 - :issue:`SERVER-78862` Fix serialization of nested $elemMatch's
+- :issue:`SERVER-78888` Unschedule Mix js
 - :issue:`SERVER-78950` Use sequential time series bucket IDs when
   possible
 - :issue:`SERVER-79021` Update Boost's entry in README.third_party.md to
@@ -89,8 +89,6 @@ Internals
 - :issue:`SERVER-79126` Pin pyyaml in another place
 - :issue:`SERVER-79138` Fix data race in AuthorizationSessionTest
   fixture
-- :issue:`SERVER-79236` Server cannot start in standalone if there are
-  cluster parameters
 - :issue:`SERVER-79252` Add the system-perf bootstrap file to the task
   Files section
 - :issue:`SERVER-79261` Add logging to ping monitor
@@ -135,6 +133,9 @@ Internals
   store_retryable_find_and_modify_images_in_side_collection.js
 - :issue:`SERVER-80207` Use 4-byte counter for tracking time series
   bucket direct writes
+- :issue:`SERVER-80224` Fix failing asserts in
+  stale_mongos_updates_and_removes.js and extract_shard_key_values.js on
+  7.0
 - :issue:`WT-10714` Select an explicitly labeled perf distro for
   performance tests
 - :issue:`WT-11202` Remove the connection level operation_timeout_ms
