--- a/source/release-notes.txt
+++ b/source/release-notes.txt
@@ -3,11 +3,20 @@
 Release Notes
 -------------
 
+.. include:: /includes/rc-available.rst
+
+.. include:: /includes/rapid-release-short.rst
+
 Always install the latest, stable version of MongoDB. For more
 information on types of MongoDB releases, see
 :ref:`release-version-numbers`.
 
 To see changes in MongoDB releases, see the following release notes.
+
+Upcoming Release
+~~~~~~~~~~~~~~~~
+
+- :ref:`release-notes-7.1`
 
 Current Rapid Release
 ~~~~~~~~~~~~~~~~~~~~~
