--- a/source/release-notes.txt
+++ b/source/release-notes.txt
@@ -3,29 +3,20 @@
 Release Notes
 -------------
 
-.. include:: /includes/rc-available.rst
-
-.. include:: /includes/rapid-release-short.rst
-
 Always install the latest, stable version of MongoDB. For more
 information on types of MongoDB releases, see
 :ref:`release-version-numbers`.
 
 To see changes in MongoDB releases, see the following release notes.
 
-Upcoming Release
-~~~~~~~~~~~~~~~~
-
-- :ref:`release-notes-7.1`
-
 Current Rapid Release
 ~~~~~~~~~~~~~~~~~~~~~
 
-(*6.3-series*)
+(*7.1-series*)
 
 .. include:: /includes/rapid-release-short.rst
 
-- :ref:`release-notes-6.3`
+- :ref:`release-notes-7.1`
 
 Current Stable Release
 ~~~~~~~~~~~~~~~~~~~~~~
@@ -51,8 +42,8 @@ Previous Stable Releases
 - :ref:`release-notes-5.0`
 - :ref:`release-notes-4.4`
 
-EOL'ed Releases
-~~~~~~~~~~~~~~~
+EOL Releases
+~~~~~~~~~~~~
 
 .. hlist::
    :columns: 2
