DOCSP-33866: Finalize 5.0.22 changelogs (#5134)
* DOCSP-33866: Finalize 5.0.22 changelogs

* DOCSP-33866: Change logs modifications

* DOCSP-33866: 5.0.22 change log updates

--- a/source/includes/changelogs/releases/5.0.22.rst
+++ b/source/includes/changelogs/releases/5.0.22.rst
@@ -6,6 +6,8 @@
 Sharding
 ~~~~~~~~
 
+- :issue:`SERVER-40459` Optimize the construction of the balancer's
+  collection distribution status histogram
 - :issue:`SERVER-79086` Deletion of ReshardingCoordinatorService state
   document is not idempotent
 - :issue:`SERVER-79327` Missing verification in refine collection shard
@@ -87,6 +89,7 @@ Internals
   should not run two refreshes without resetting the catalog cache
   loader mock return value
 - :issue:`SERVER-79926` Investigate OCSP failure possibilities
+- :issue:`SERVER-79975` [Classic] Optimize large group keys
 - :issue:`SERVER-80021` Make $convert round-trip correctly between
   double and string
 - :issue:`SERVER-80100` Fix typo in excluding
@@ -122,8 +125,12 @@ Internals
   phase on the recipient shard
 - :issue:`SERVER-81202` Use host environment when signing
 - :issue:`SERVER-81431` Add canaries_only task to older mongo branches
+- :issue:`SERVER-81904` Address test-only issue in UpdateChunkMapRandom
+  unit test
 - :issue:`SERVER-81966` Avoid modification of previous ChunkMap
   instances during refresh
+- :issue:`SERVER-81985` FlushRoutingTableCacheUpdates command should not
+  be allowed on databases
 - :issue:`SERVER-82003` powercycle tests are missing variables
 - :issue:`SERVER-82070` Classic window function $stdDevSamp handles
   empty window frame incorrectly
