DOCSP-34501 finalize 6.0.12 release notes (#5390)
* DOCSP-34501 finalize 6.0.12 release notes

* DOCSP-34501
ian feedback

--- a/source/includes/changelogs/releases/6.0.12.rst
+++ b/source/includes/changelogs/releases/6.0.12.rst
@@ -66,7 +66,6 @@ Internals
   to non-existing oplog
 - :issue:`SERVER-80886` $out may fail with a StaleDbVersion after a
   movePrimary
-- :issue:`SERVER-80901` Audit gFeatureFlagServerlessChangeStreams
 - :issue:`SERVER-80988` [6.0] Search Index Management Commands Fail To
   Detect Collection on Other Shards
 - :issue:`SERVER-81033` Ignore the collMod response from the DBPrimary
@@ -80,10 +79,14 @@ Internals
 - :issue:`SERVER-81390` HashAggStage fails to respect the collation when
   spilling to disk
 - :issue:`SERVER-81431` Add canaries_only task to older mongo branches
+- :issue:`SERVER-81435` Add metrics to capture impact of time series
+  group commit
 - :issue:`SERVER-81524` No-op invocations of setUserWriteBlockMode must
   await majority confirmation of SystemLastOpTime
 - :issue:`SERVER-81532` FIx tag on timeseries_groupby_reorder.js
 - :issue:`SERVER-81581` Extend BlackDuck timeout
+- :issue:`SERVER-81603` Set the stream worker thread of the balancer as
+  interruptible to support a correct stepdown of the config server
 - :issue:`SERVER-81762` Wait to run test until HMAC keys refresh
   finishes in read_preference_metrics.js
 - :issue:`SERVER-81886` Disable jstests/core/fts_index3.js on non-FCV
@@ -118,6 +121,12 @@ Internals
 - :issue:`SERVER-82864` Handle WriteConflict errors in
   fle2_contention_kill_parent.js
 - :issue:`SERVER-82990` Investigate powercycle failures on v6.0 and v5.0
+- :issue:`SERVER-83134` Unit tests of ShardSplitDonorServiceTest get
+  failed in v6.0
+- :issue:`SERVER-83144` Wait for secondaries to refresh HMAC key in
+  read_preference_metrics.js
+- :issue:`SERVER-83150` Document::shred() does not copy document
+  metadata
 - :issue:`WT-7492` Ignore the evict drain wait msg in stdout.txt for
   test_cursor_random
 - :issue:`WT-7929` Investigate a solution to avoid FTDC stalls during
