DOCSP-33959 Rerun changelog script for 6.0.11 (#5635)
* DOCSP-33959 Rerun changelog script for 6.0.11

* Force rebuild

* Force rebuild

* Force rebuild

* Force rebuild

--- a/source/includes/changelogs/releases/6.0.11.rst
+++ b/source/includes/changelogs/releases/6.0.11.rst
@@ -6,6 +6,8 @@
 Sharding
 ~~~~~~~~
 
+- :issue:`SERVER-40459` Optimize the construction of the balancer's
+  collection distribution status histogram
 - :issue:`SERVER-79086` Deletion of ReshardingCoordinatorService state
   document is not idempotent
 - :issue:`SERVER-79327` Missing verification in refine collection shard
@@ -70,6 +72,8 @@ Internals
   lock command
 - :issue:`SERVER-78156` Test the mongos fsync with lock command with
   distributed transactions
+- :issue:`SERVER-78159` Merge DocumentSourceInternalSearchMongotRemote
+  and DocumentSourceInternalIdLookup into DocumentSourceSearch
 - :issue:`SERVER-78253` Allow folks with hashed shard keys to drop the
   hashed index
 - :issue:`SERVER-78529` Create feature flag
