--- a/source/release-notes.txt
+++ b/source/release-notes.txt
@@ -75,6 +75,7 @@ EOL Releases
    :maxdepth: 1
    :hidden:
 
+   /release-notes/7.3
    /release-notes/7.2
    /release-notes/7.1
    /release-notes/7.0
