DOCSP-29667-bulk-command-additional-updates (#5777)
* DOCSP-29667-bulk-command-additional-updates

* DOCSP-29667-bulk-command-additional-updates

* DOCSP-29667-bulk-command-additional-updates

* DOCSP-29667-bulk-command-additional-updates

* DOCSP-29667-bulk-command-additional-updates

* DOCSP-29667-bulk-command-additional-updates

* DOCSP-29667-bulk-command-additional-updates

* DOCSP-29667-bulk-command-additional-updates

* DOCSP-29667-bulk-command-additional-updates

* DOCSP-29667-bulk-command-additional-updates

* DOCSP-29667-bulk-command-additional-updates

* DOCSP-29667-bulk-command-additional-updates

* DOCSP-29667-bulk-command-additional-updates

* DOCSP-29667-bulk-command-additional-updates

* DOCSP-29667-bulk-command-additional-updates

* DOCSP-29667-bulk-command-additional-updates

* DOCSP-29667-bulk-command-additional-updates

* DOCSP-29667-bulk-command-additional-updates

* DOCSP-29667-bulk-command-additional-updates

---------

Co-authored-by: jason-price-mongodb <jshfjghsdfgjsdjh@aolsdjfhkjsdhfkjsdf.com>

--- a/source/release-notes.txt
+++ b/source/release-notes.txt
@@ -75,6 +75,7 @@ EOL Releases
    :maxdepth: 1
    :hidden:
 
+   /release-notes/8.0
    /release-notes/7.3
    /release-notes/7.2
    /release-notes/7.1
