Removes 4.2 Release Notes (#7557)
* Remove 4.2 Release Notes

* Build error fixes

* Build error fixes

* Build error fixes

* Build error fixes

--- a/source/includes/4.4-upgrade-replacements.rst
+++ b/source/includes/4.4-upgrade-replacements.rst
@@ -4,7 +4,7 @@
 .. |oldseries| replace:: 4.2-series
 .. |olderseries| replace:: 4.0-series
 .. |compatibility| replace:: :doc:`/release-notes/4.4-compatibility`
-.. |upgradefirst| replace:: :ref:`upgrade first to 4.2 <4.2-upgrade>`
+.. |upgradefirst| replace:: upgrade first to 4.2
 .. |downgradepath| replace:: Once upgraded to |newversion|, if you need to downgrade, we recommend |downgrading| to the latest patch release of |downgradeversion|.
 
 .. |features| replace:: :ref:`features<4.4-compatibility-enabled>` 
