--- a/source/includes/4.2-upgrade-replacements.rst
+++ b/source/includes/4.2-upgrade-replacements.rst
@@ -3,10 +3,10 @@
 .. |oldversion| replace:: 4.0
 .. |oldseries| replace:: 4.0-series
 .. |olderseries| replace:: 3.6-series
-.. |compatibility| replace:: :doc:`/release-notes/4.2-compatibility`
+.. |compatibility| replace:: 4.2 Compatibility Notes
 .. |upgradefirst| replace:: :ref:`upgrade first to 4.0 <4.0-upgrade>`
 .. |downgradepath| replace:: Once upgraded to |newversion|, if you need to downgrade, we recommend |downgrading| to the latest patch release of |downgradeversion|.
-.. |features| replace:: :ref:`features<4.2-compatibility-enabled>` 
+.. |features| replace:: features 
 .. |downgradeversion| replace:: 4.0
 
 .. |installationdoc| replace:: :ref:`4.2 installation instructions <tutorial-installation>`
