DOCSP-38907 Add rc-available banner (#7567)
* DOCSP-38907 add rc-available banner

* DOCSP-38907 add banner to verify page

--- a/source/release-notes.txt
+++ b/source/release-notes.txt
@@ -16,6 +16,8 @@ Current Stable Release
 
 (*8.0-series*)
 
+.. include:: includes/rc-available.rst
+
 - :ref:`release-notes-8.0`
 
 Previous Rapid Releases
