--- a/source/includes/4.0-upgrade-replacements.rst
+++ b/source/includes/4.0-upgrade-replacements.rst
@@ -3,9 +3,9 @@
 .. |oldversion| replace:: 3.6
 .. |oldseries| replace:: 3.6-series
 .. |olderseries| replace:: 3.4-series
-.. |compatibility| replace:: :doc:`/release-notes/4.0-compatibility`
+.. |compatibility| replace:: 4.0 Compatibility Notes
 .. |upgradefirst| replace:: :ref:`upgrade first to 3.6 <3.6-upgrade>`
 .. |downgradepath| replace:: Once upgraded to |newversion|, if you need to downgrade, we recommend |downgrading| to the latest patch release of |oldversion|.
-.. |features| replace:: :ref:`features<4.0-compatibility-enabled>` 
+.. |features| replace:: features
 
 .. |installationdoc| replace:: :v4.0:`4.0 installation instructions </installation>`
