Removes 3.6 Release Notes (#7559)
* Removes 3.6 Release Notes

* Fix build errors

* Fix build errors

--- a/source/includes/3.6-upgrade-replacements.rst
+++ b/source/includes/3.6-upgrade-replacements.rst
@@ -3,10 +3,10 @@
 .. |oldversion| replace:: 3.4
 .. |oldseries| replace:: 3.4-series
 .. |olderseries| replace:: 3.2-series
-.. |compatibility| replace:: :doc:`/release-notes/3.6-compatibility`
-.. |upgradefirst| replace:: :ref:`upgrade first to 3.4 <3.4-upgrade>`
+.. |compatibility| replace:: 3.6 Compatibility Notes
+.. |upgradefirst| replace:: upgrade first to 3.4 
 .. |downgradepath| replace:: Once upgraded to |newversion|, if you need to downgrade, we recommend |downgrading| to the latest patch release of 3.4.
 
-.. |features|  replace:: :ref:`features <3.6-compatibility-enabled>`
+.. |features|  replace:: features 
 
 .. |installationdoc| replace:: :v3.6:`3.6 installation instructions </installation>`
