--- a/source/includes/4.0-upgrade-replacements.rst
+++ b/source/includes/4.0-upgrade-replacements.rst
@@ -4,8 +4,8 @@
 .. |oldseries| replace:: 3.6-series
 .. |olderseries| replace:: 3.4-series
 .. |compatibility| replace:: 4.0 Compatibility Notes
-.. |upgradefirst| replace:: :ref:`upgrade first to 3.6 <3.6-upgrade>`
+.. |upgradefirst| replace:: upgrade first to 3.6 
 .. |downgradepath| replace:: Once upgraded to |newversion|, if you need to downgrade, we recommend |downgrading| to the latest patch release of |oldversion|.
-.. |features| replace:: features
+.. |features| replace:: features 
 
 .. |installationdoc| replace:: :v4.0:`4.0 installation instructions </installation>`
