--- a/source/includes/changelogs/releases/7.0.9.rst
+++ b/source/includes/changelogs/releases/7.0.9.rst
@@ -3,6 +3,12 @@
 7.0.9 Changelog
 ---------------
 
+Sharding
+~~~~~~~~
+
+:issue:`SERVER-89134` Test wrongly assumes multi writes outside of
+transactions are atomic
+
 Write Operations
 ~~~~~~~~~~~~~~~~
 
@@ -25,9 +31,30 @@ WiredTiger
 Internals
 ~~~~~~~~~
 
+- :issue:`SERVER-65974` Replace HistoricalIdentTracker with checkpoint
+  cursors
+- :issue:`SERVER-74931` Add AtomicWord::storeRelaxed
+- :issue:`SERVER-76001` Add serverStatus metrics for
+  PeriodicThreadToAbortExpiredTransactions
+- :issue:`SERVER-76534` Fix reporting the namespace and UUID in a backup
+  cursor when the changes have not yet been checkpointed
+- :issue:`SERVER-77427` Avoid going through the network when a shard is
+  targeting only itself for a $lookup subpipeline
+- :issue:`SERVER-77530` Join the mirroring executor on shutdown
+- :issue:`SERVER-79049` Server returns unexpected CollectionUUIDMismatch
+  with actual collection name equal to expected collection name
 - :issue:`SERVER-79637` Incorrect query results in $lookup with TS
   foreign collection using a correlated predicate
+- :issue:`SERVER-79774` Emit warning when balancing disabled for
+  collections with chunks on draining shard
+- :issue:`SERVER-80194` In sharded_agg_helpers.cpp we retrieve
+  CollectionRoutingInfo without checking for transaction
 - :issue:`SERVER-80340` Handle and test dbCheck during initial sync
+- :issue:`SERVER-80341` sharded_agg_helpers::attachCursorToPipeline
+  should not attach dbVersion when targeting local shard by routing
+  table
+- :issue:`SERVER-81807` Cached SBE plans have let-bound constants baked
+  in
 - :issue:`SERVER-82349` Mongo 7 crashes on applyOps index delete/drops
   without a collection UUID
 - :issue:`SERVER-82571` insert_with_data_size_aware_balancing.js may
@@ -37,7 +64,11 @@ Internals
   $_internalSchemaAllElemMatchFromIndex
 - :issue:`SERVER-83193` Replace deprecated BatchedCommandRequest
   getters/setters for WC with the ones provided by OperationContext
+- :issue:`SERVER-83370` PrepareUnique:true for time-series collections
+  should error
 - :issue:`SERVER-83984` WiredTiger verbosity level is suppressed
+- :issue:`SERVER-84440` Expose the number of replication waiters in
+  serverStatus
 - :issue:`SERVER-84653` Make the auto_safe_reconfig_helper tests wait
   for newly added removal
 - :issue:`SERVER-84717` [SBE] Fix buildGroup() to tolerate multiple
@@ -50,6 +81,8 @@ Internals
 - :issue:`SERVER-86201` Cluster upserts performed through the
   ShardServerProcessInterface should use the operation context to
   configure their write concern
+- :issue:`SERVER-86253` Add serverstatus to record how many users use
+  retryable writes
 - :issue:`SERVER-86327` Time-series single schema per bucket column is
   not maintained in some cases
 - :issue:`SERVER-86375` Make index_build_memory_tracking.js less strict
@@ -59,18 +92,27 @@ Internals
   when it should
 - :issue:`SERVER-86419` SBE and Classic behave differently for
   $bitsAnyClear on NumberDecimal infinity
+- :issue:`SERVER-86474` $_internalApplyOplogUpdate with $set: { foo:
+  Timestamp(0, 0) } is not replicated correctly
 - :issue:`SERVER-86478` Time-series bucket min/max does not track empty
   field names under certain circumstances
 - :issue:`SERVER-86529` Re-enable powercycle tests in Evergreen
 - :issue:`SERVER-86640` Refactor out JWKS refresh from IdentityProvider
   into a IDPJWKSRefresher
 - :issue:`SERVER-86642` Update IDP registration selection process
+- :issue:`SERVER-86648` Resumable index build sorter files are not
+  fsynced on shutdown
 - :issue:`SERVER-86987` Ensure check_metadata_consistency.js use
   retriable writes when contacting config server
+- :issue:`SERVER-87032` Query Stats appear not to be collected for
+  whole-db and whole-cluster change streams
 - :issue:`SERVER-87306` Prevent accessing OCSP manager ptr during
   shutdown
+- :issue:`SERVER-87379` Cache the value of CanonicalQuery::toStringShort
+  in PrepareExecutionHelper
 - :issue:`SERVER-87521` Fix race in BackgroundSync between making
   RollbackImpl and shutdown
+- :issue:`SERVER-87537` Make InternalSearchMongotRemoteSpec not strict
 - :issue:`SERVER-87573` Allow token_endpoint to be optional in OpenID
   Discovery Document
 - :issue:`SERVER-87845` Fix watchdog unit test PauseAndResume timeout
@@ -81,6 +123,8 @@ Internals
 - :issue:`SERVER-87987` Timeseries optimization does not exclude the
   timeField though it's renamed by the $addFields and excluded by a
   project
+- :issue:`SERVER-88017` Resolve lock-order-inversion TSAN error in
+  TimestampKVEngineTest
 - :issue:`SERVER-88034` Fix powercycle task configurations
 - :issue:`SERVER-88097` Add the --release flag to the sys-perf compiles
 - :issue:`SERVER-88136` Fix arbiter_always_has_latest_fcv.js test to
@@ -113,9 +157,19 @@ Internals
   name
 - :issue:`SERVER-89068` Explicitly set exec_timeout and timeout_secs for
   the sys-perf project
+- :issue:`SERVER-89076`
+  test_resharding_test_fixture_shutdown_retry_needed does not handle
+  SnapshotUnavailable errors
 - :issue:`SERVER-89235` internal_strip_invalid_assignment.js missing tag
 - :issue:`SERVER-89251` Revert concurrent movePrimary and aggregations
   test from v7.0 and v6.0
+- :issue:`SERVER-89253` Make re-using compiled binaries in scons compile
+  script more resilient
+- :issue:`SERVER-89402` insert_with_data_size_aware_balancing.js is
+  incompatible with test suites killing/terminating the CSRS primary
+- :issue:`SERVER-89414` Harden shard removal in a
+  store_historical_placement_data.js test teardown
+- :issue:`SERVER-89554` Fix evergreen/compiled_binaries_get.sh script
 - :issue:`WT-11532` Fix session reset RNG by using cursor RNG
 - :issue:`WT-12225` Fix RNG generator weakness around mongodb $sample
   stage
