(DOCSP-38961): Fix release notes headings for 8.0 upcoming (#7633)

--- a/source/release-notes.txt
+++ b/source/release-notes.txt
@@ -11,14 +11,21 @@ information on types of MongoDB releases, see
 
 To see changes in MongoDB releases, see the following release notes.
 
-Current Stable Release
-~~~~~~~~~~~~~~~~~~~~~~
+Upcoming Stable Release
+~~~~~~~~~~~~~~~~~~~~~~~
 
 (*8.0-series*)
 
 .. include:: includes/rc-available.rst
 
 - :ref:`release-notes-8.0`
+
+Current Stable Release
+~~~~~~~~~~~~~~~~~~~~~~
+
+(*7.0-series*)
+
+- :ref:`release-notes-7.0`
 
 Previous Rapid Releases
 ~~~~~~~~~~~~~~~~~~~~~~~
