DOCSP-38952 Finalize 7.0.9 rn updates (#7665)
* DOCSP-38952 7.0.9 updates

* DOCSP-38952 fix abbreviation

* DOCSP-38952 date

--- a/source/includes/changelogs/releases/7.0.9.rst
+++ b/source/includes/changelogs/releases/7.0.9.rst
@@ -126,6 +126,8 @@ Internals
 - :issue:`SERVER-88017` Resolve lock-order-inversion TSAN error in
   TimestampKVEngineTest
 - :issue:`SERVER-88034` Fix powercycle task configurations
+- :issue:`SERVER-88063` Add RetryableWriteError label when write
+  operation fails with StaleConfig and is direct to shard
 - :issue:`SERVER-88097` Add the --release flag to the sys-perf compiles
 - :issue:`SERVER-88136` Fix arbiter_always_has_latest_fcv.js test to
   correctly test arbiter FCV behavior
@@ -139,14 +141,14 @@ Internals
   collection during downgrade from v7.2 to v7.0
 - :issue:`SERVER-88404` checkMetadataConsistency should refresh if it
   finds no cached info for database
-- :issue:`SERVER-88605` sys-perf configuration: update release version
-  in commented out build variants
 - :issue:`SERVER-88650` Deadlock in VectorClockMongoD during shutdown
 - :issue:`SERVER-88676` Backport build_patch_id functionality to 7.0
 - :issue:`SERVER-88755` Make sure all sys-perf build variants specify a
   mongodb_setup_release
 - :issue:`SERVER-88779` FLE2 retryable write breaks if an internal
   transaction is retried
+- :issue:`SERVER-88833` mongos generates a reply for writes sent by
+  client with w:0
 - :issue:`SERVER-88864` Make
   nodes_eventually_sync_from_closer_data_center.js more robust to
   transient slow heartbeat issues
