--- a/source/includes/changelogs/releases/7.0.11.rst
+++ b/source/includes/changelogs/releases/7.0.11.rst
@@ -98,6 +98,8 @@ Internals
   against identical events
 - :issue:`SERVER-90112` Do not call FeatureFlag::isEnabled in
   audit::log*ClusterParameter
+- :issue:`SERVER-90116` Backup file cursors should require system
+  authorization
 - :issue:`SERVER-90135` Ensure the Windows system CA stores are in a
   clean state at the start of ssl_linear tests
 - :issue:`SERVER-90170` Do not use jsTestName() in explain_skip.js
