(DOCSP-40147): Finalize 5.0.27 release notes (#7917)

--- a/source/includes/changelogs/releases/5.0.27.rst
+++ b/source/includes/changelogs/releases/5.0.27.rst
@@ -50,7 +50,7 @@ Internals
   cancel_coordinate_txn_commit_with_tickets_exhausted.js
 - :issue:`SERVER-72090` system.users can be renamed to regular
   collections and vice versa
-- :issue:`SERVER-73485` Remove ``jstests``/``parallel``/``basic*``
+- :issue:`SERVER-73485` Remove jstests/parallel/basic*
 - :issue:`SERVER-74931` Add AtomicWord::storeRelaxed
 - :issue:`SERVER-77530` Join the mirroring executor on shutdown
 - :issue:`SERVER-77559` Implement file system log handler for resmoke
@@ -154,8 +154,6 @@ Internals
 - :issue:`SERVER-89163` Chunk Migration Destination Should Wait for
   Majority Before Engaging Critical Section
 - :issue:`SERVER-89235` internal_strip_invalid_assignment.js missing tag
-- :issue:`SERVER-89279` Handle EBUSY when opening the duplicate backup
-  filename
 - :issue:`SERVER-89418` CursorManager loses track of registered cursors
   for queries with multiple executors
 - :issue:`SERVER-89474` Properly validate sortBy when parsing
@@ -171,6 +169,8 @@ Internals
   session cleanup can cause mongos to terminate
 - :issue:`SERVER-89752` Make logkeeper buildIDs stay unique when
   branching
+- :issue:`SERVER-90006` Adjust commit message validation to handle
+  GitHub merge queue
 - :issue:`SERVER-90020` Explicitly use 1 config server for
   mongos_api_params_util tests
 - :issue:`SERVER-90090` Update Amazon 2 distros to the latest
@@ -187,7 +187,6 @@ Internals
 - :issue:`SERVER-90513` Check whether SSL_get0_verified_chain returns
   null before consuming it
 - :issue:`SERVER-90830` Add retries to cloneing QA.git
-- :issue:`SERVER-90894` Fix multiversion on SUSE 15 variant
 - :issue:`WT-11241` Skip current transaction snap_min visible deleted
   pages as part of the tree walk
 - :issue:`WT-12304` RTS should provide information about how much more
