--- a/source/includes/changelogs/releases/7.3.3.rst
+++ b/source/includes/changelogs/releases/7.3.3.rst
@@ -72,6 +72,8 @@ Internals
   cause setFCV to fail on retry
 - :issue:`SERVER-87087` Validate unique index ordering check does not
   work for clustered collections
+- :issue:`SERVER-87267` Increase bucket_catalog memory usage threshold
+  for timeseries_dynamic_bucket_sizing.js
 - :issue:`SERVER-87563` Failure to parse oplog entries should be less
   disruptive
 - :issue:`SERVER-87705` Fix race in InvalidTTLIndexFixer
@@ -214,6 +216,8 @@ Internals
 - :issue:`SERVER-90637` makeSnapshot test command must return a
   committed timestamp
 - :issue:`SERVER-90681` Fix data race over the chunk jumbo flag
+- :issue:`SERVER-90747` Handle $elemMatch with empty path in plan
+  enumerator correctly
 - :issue:`SERVER-90985` AddToSetNode::init() should uassert if argument
   to $each is invalid BSON
 - :issue:`SERVER-90988` PrepareExecutionHelper destructor should use the
