--- a/source/includes/changelogs/releases/6.0.16.rst
+++ b/source/includes/changelogs/releases/6.0.16.rst
@@ -45,8 +45,6 @@ Internals
 - :issue:`SERVER-72090` system.users can be renamed to regular
   collections and vice versa
 - :issue:`SERVER-73485` Remove jstests/parallel/basic*
-- :issue:`SERVER-74710` Reduce race with storage engine shutdown and
-  RandomCursor destructor
 - :issue:`SERVER-74931` Add AtomicWord::storeRelaxed
 - :issue:`SERVER-75441` Run memory intensive tests on Enterprise SUSE 12
   on larger distro
@@ -253,8 +251,8 @@ Internals
 - :issue:`SERVER-90747` Handle $elemMatch with empty path in plan
   enumerator correctly
 - :issue:`SERVER-90830` Add retries to cloneing QA.git
-- :issue:`SERVER-90898` Mark change_streams_shards_start_in_sync as
-  ppc64le_incompatible
+- :issue:`SERVER-90921` [v6.0] Query stats DBRef test failures due to
+  python driver version
 - :issue:`SERVER-90928` Make copybara prune out extra lines on commit
   messages
 - :issue:`SERVER-90991` Bump timeout on
@@ -262,8 +260,8 @@ Internals
 - :issue:`SERVER-91094` Make backports require codeowners
 - :issue:`SERVER-91179` Skip jstests directory in codeowners for v7.0,
   v6.0, and v5.0
-- :issue:`SERVER-91188` Remove $_generateV2ResumeTokens from
-  multiversion test on v6.0
+- :issue:`WT-9502` Checkpoint cleanup should not mark a dirty page as
+  obsolete
 - :issue:`WT-11532` Fix session reset RNG by using cursor RNG
 - :issue:`WT-11972` Refresh application thread snapshot if eviction
   didn't make progress
