--- a/source/includes/changelogs/releases/7.0.12.rst
+++ b/source/includes/changelogs/releases/7.0.12.rst
@@ -18,6 +18,8 @@ WiredTiger
 - :issue:`WT-10994` Make sweep server respect WT_DHANDLES_DROPPED flag
   plus prevent user creating a bulk cursor when a transaction is running
 - :issue:`WT-11194` Fixing format load when reverse is enabled
+- :issue:`WT-11273` Prevent hs_search stress point with pareto and
+  predictable replay
 - :issue:`WT-11941` Incorrect timing statistics for eviction and
   reconciliation
 - :issue:`WT-12110` Disable timestamp_abort backup tests in the
@@ -107,6 +109,7 @@ Internals
   null before consuming it
 - :issue:`SERVER-90543` Transaction participant should hold client lock
   when configuring opCtx
+- :issue:`SERVER-90599` Remove unused link to liblzma (work ticket)
 - :issue:`SERVER-90657` [v7.0] Fix ignore_dbcheck_in_startup_recovery.js
   on 7.0
 - :issue:`SERVER-90678` Tag sharded incremental backups tests as
@@ -150,6 +153,7 @@ Internals
   v6.0, and v5.0
 - :issue:`SERVER-91182` Make schedule_global_auto_tasks and related
   "patch only"
+- :issue:`SERVER-91186` Move sys-perf to running on RHEL 9.4 machines.
 - :issue:`SERVER-91222` Make cluster_time_across_add_shard.js
   temporarily retry on KeyNotFound error after restarting the replica
   set
@@ -161,12 +165,11 @@ Internals
 - :issue:`SERVER-91322` set evergreen config options in the
   multiversion-config subcommand
 - :issue:`SERVER-91324` Pin jepsen clones to a specific tag
-- :issue:`SERVER-91339` $redact may corrupt memory if $$ROOT is used in
-  the expression.
 - :issue:`SERVER-91362` Performance: Do not copy JS "scope" object if a
   cached JsExecution exists
 - :issue:`SERVER-91407` Create SBOM for crypt_shared library for 7.0
 - :issue:`SERVER-91423` [v7.0] add detect_evergreen_config function
+- :issue:`SERVER-91435` Regenerate test certs with legacy flag
 - :issue:`SERVER-91494` Avoid past-the-end access of group by field in
   DocumentSourceBucket
 - :issue:`SERVER-91507` Update the sbom with mozjs new version on 7.0
@@ -175,8 +178,8 @@ Internals
 - :issue:`SERVER-91558` Make HedgeCancellationTest resilient to
   operation interruption
 - :issue:`SERVER-91679` [v7.0] Pin puremagic library to 1.23
-- :issue:`SERVER-91680` Disable test case on
-  concurrent_drops_and_create.js on v6.0 multiversion
+- :issue:`WT-11092` Update s_clang_format to automatically download
+  aarch64 binaries
 - :issue:`WT-11109` wt_wrap_open_cursor returns WT_NOTFOUND in
   test/format for a checkpoint cursor
 - :issue:`WT-12708` Evaluation/Revision of eviction random traversal
