(DOCSP-41308): Finalize changelog for 5.0.28 (#8305)
* (DOCSP-41308): Finalize changelog for 5.0.28

* build error fix

--- a/source/includes/changelogs/releases/5.0.28.rst
+++ b/source/includes/changelogs/releases/5.0.28.rst
@@ -78,6 +78,7 @@ Internals
 - :issue:`SERVER-91562` [5.0] IndexDescriptor::compareIndexOptions
   treats no unique/sparse as not identical to unique:false/sparse:false
 - :issue:`SERVER-91640` Un-hardcode Cert Thumbprints
-- :issue:`SERVER-91705` Disable convert_to_and_from_sharded.js on PPC for 5.0
+- :issue:`SERVER-91705` Disable convert_to_and_from_sharded.js on PPC
+  for 5.0
 - :issue:`SERVER-91793` Exclude backports touching only
   ``etc/*suppressions`` files from release codeownership
