DOCSP-40143-query-shape-page (#8072)
* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape

--- a/source/includes/changelogs/releases/7.0.8.rst
+++ b/source/includes/changelogs/releases/7.0.8.rst
@@ -55,7 +55,7 @@ Internals
   namespace of received stale exceptions
 - :issue:`SERVER-87616` Create minimal trySbeEngine build variant on
   release configurations which have SBE
-- :issue:`SERVER-87666` Query shape for $documents is unique on each
+- :issue:`SERVER-87666` Plan cache query shape for $documents is unique on each
   execution
 - :issue:`SERVER-87982` Rename the THP_enabled field in the ftdc
   systemMetrics status section
