--- a/source/includes/changelogs/releases/7.2.1.rst
+++ b/source/includes/changelogs/releases/7.2.1.rst
@@ -49,7 +49,7 @@ Internals
 - :issue:`SERVER-80363` server default writeConcern is not honored when
   wtimeout is set
 - :issue:`SERVER-81313` change streams fail to re-parse their own
-  representative query shape serialization for ResumeToken
+  representative plan cache query shape serialization for ResumeToken
 - :issue:`SERVER-81496` Weird shapification behavior for
   $convert/$toString
 - :issue:`SERVER-81517` blacklist validate_db_metadata_command.js from
